tests/baselines/reference/importCallExpression3ES2020.errors.txt
tests/cases/conformance/dynamicImport/2.ts(6,1): error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator


==== tests/cases/conformance/dynamicImport/0.ts (0 errors) ====
    export class B {
        print() { return "I am B"}
    }
    
==== tests/cases/conformance/dynamicImport/2.ts (1 errors) ====
    async function foo() {
        class C extends (await import("./0")).B {}
        var c = new C();
        c.print();
    }
    foo();
    ~~~~~
!!! error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator
    